--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -9,8 +9,8 @@
 		{
 			description = A unique world, Kerbin has flat plains, soaring mountains and wide, blue oceans. Home to the Kerbals, it has just the right conditions to support a vast, seemingly undepletable population of the eager green creatures.Reaching a stable orbit around Kerbin is one of the first things budding space programs strive for. It is said that those who can get their ship into orbit are halfway to anywhere.
 			radius = 600000
-			geeASL = 1
-			mass = 5.29157926281091E+22
+			geeASL = 1.00034160493135
+			mass = 5.29151583439215E+22
 			gravParameter = 3531600000000
 			rotates = True
 			rotationPeriod = 21549.4251830898
@@ -32,62 +32,74 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Water
 					value = 0
-					color = 0,0.1960784,0.5176471,1
+					color = 0.215686277,0.384313732,0.670588255,1
 				}
 				Biome
 				{
 					name = Grasslands
 					value = 0
-					color = 0.3490196,0.7843137,0.05882353,1
+					color = 0.513725519,0.737254918,0.180392161,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.1098039,0.5333334,0,1
+					color = 0.36470589,0.521568656,0.164705887,1
 				}
 				Biome
 				{
 					name = Shores
 					value = 0
-					color = 0.7058824,0.3882353,0.5176471,1
+					color = 0.980392158,0.949019611,0.717647076,1
 				}
 				Biome
 				{
 					name = Mountains
 					value = 0
-					color = 0.509804,0.2745098,0,1
+					color = 0.654901981,0.654901981,0.654901981,1
 				}
 				Biome
 				{
 					name = Deserts
 					value = 0
-					color = 0.9607843,0.7372549,0,1
+					color = 0.917647064,0.749019623,0.435294122,1
 				}
 				Biome
 				{
 					name = Badlands
 					value = 0
-					color = 0.02745098,0.1490196,0.03529412,1
+					color = 0.592156887,0.309803933,0.137254909,1
 				}
 				Biome
 				{
 					name = Tundra
 					value = 0
-					color = 0.4705882,0.8862745,0.4,1
+					color = 0.78039217,0.56078434,0.874509811,1
 				}
 				Biome
 				{
 					name = Ice Caps
 					value = 0
-					color = 0.9960784,0.9960784,0.9960784,1
+					color = 1,1,1,1
+				}
+				Biome
+				{
+					name = Northern Ice Shelf
+					value = 0
+					color = 0.894117653,0.992156863,1,1
+				}
+				Biome
+				{
+					name = Southern Ice Shelf
+					value = 0
+					color = 0.847058833,0.847058833,0.847058833,1
 				}
 			}
 			ScienceValues
@@ -114,7 +126,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
@@ -133,8 +145,8 @@
 			temperatureCurveIsNormalized = False
 			temperatureLapseRate = 0.0041
 			temperatureSeaLevel = 287
-			ambientColor = 0.2431373,0.2509804,0.254902,1
-			lightColor = 0.65,0.57,0.475,0.5
+			ambientColor = 0.243137255,0.250980407,0.254901975,1
+			lightColor = 0.649999976,0.569999993,0.474999994,0.5
 			addAFG = True
 			pressureCurve
 			{
@@ -223,7 +235,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 599625
-				invWaveLength = 5.602046,9.473285,19.6438,0.5
+				invWaveLength = 5.60204554,9.47328472,19.6438026,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 615000
@@ -231,7 +243,7 @@
 				scale = 0.3902439
 				scaleDepth = -0.25
 				transformScale = 0,0,0
-				waveLength = 0.65,0.57,0.475,0.5
+				waveLength = 0.649999976,0.569999993,0.474999994,0.5
 				outerRadiusMult = 1.025
 				innerRadiusMult = 0.975
 			}
@@ -246,7 +258,7 @@
 			Material
 			{
 				color = 1,1,1,1
-				specColor = 0.1647059,0.1647059,0.1647059,1
+				specColor = 0.164705887,0.164705887,0.164705887,1
 				shininess = 0.1085012
 				texture = BUILTIN/KerbinScaledSpace300
 				mainTex = BUILTIN/KerbinScaledSpace300
@@ -262,7 +274,7 @@
 				rimColorRamp = BUILTIN/AerialRampKerbin2
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.005962014,-1.304649E-07,0.9999823,0
+				localLightDirection = -0.349999994,0,0.150000006,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -284,7 +296,7 @@
 			{
 				saturation = 1
 				contrast = 4
-				tintColor = 0.172549,0.172549,0.172549,0.4823529
+				tintColor = 0.172549024,0.172549024,0.172549024,0.482352942
 				powerNear = 0.75
 				powerFar = 0.75
 				groundTexStart = 0
@@ -334,7 +346,7 @@
 			{
 				saturation = 1
 				contrast = 2
-				tintColor = 0.172549,0.172549,0.172549,0.4823529
+				tintColor = 0.172549024,0.172549024,0.172549024,0.482352942
 				texTiling = 4000
 				texPower = 0.75
 				multiPower = 0.75
@@ -478,7 +490,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.6940298,0.631407,0.4732021,1
+							color = 0.694029808,0.631407022,0.473202139,1
 							coverageBlend = 1
 							coverageFrequency = 2
 							coverageOctaves = 4
@@ -490,7 +502,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.5
-							noiseColor = 0.6044776,0.5820802,0.454415,1
+							noiseColor = 0.604477644,0.582080245,0.454414994,1
 							noiseFrequency = 8
 							noiseOctaves = 4
 							noisePersistance = 0.5
@@ -559,7 +571,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2350805,0.2761194,0.1901941,1
+							color = 0.235080481,0.276119411,0.19019413,1
 							coverageBlend = 1
 							coverageFrequency = 6
 							coverageOctaves = 8
@@ -571,7 +583,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.75
-							noiseColor = 0.1511772,0.2014925,0.08524685,1
+							noiseColor = 0.151177242,0.201492548,0.0852468461,1
 							noiseFrequency = 14
 							noiseOctaves = 3
 							noisePersistance = 0.9
@@ -635,7 +647,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.141791,0.141791,0.141791,1
+							color = 0.141791046,0.141791046,0.141791046,1
 							coverageBlend = 0.7
 							coverageFrequency = 2
 							coverageOctaves = 4
@@ -647,7 +659,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.1492537,0.14127,0.1278572,1
+							noiseColor = 0.149253726,0.141269952,0.127857208,1
 							noiseFrequency = 12
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -716,7 +728,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.4179105,0.4179105,0.4179105,1
+							color = 0.417910457,0.417910457,0.417910457,1
 							coverageBlend = 0
 							coverageFrequency = 1
 							coverageOctaves = 4
@@ -728,7 +740,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.25
-							noiseColor = 0.477612,0.4740741,0.4740741,1
+							noiseColor = 0.477611959,0.474074066,0.474074066,1
 							noiseFrequency = 18
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -792,7 +804,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.3334522,0.4402985,0.2971245,1
+							color = 0.333452225,0.440298498,0.297124505,1
 							coverageBlend = 1
 							coverageFrequency = 6
 							coverageOctaves = 4
@@ -804,7 +816,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.3496753,0.4253731,0.3435706,1
+							noiseColor = 0.349675268,0.425373137,0.34357059,1
 							noiseFrequency = 34
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -873,7 +885,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.641791,0.5348482,0.4106565,1
+							color = 0.641791046,0.534848213,0.410656542,1
 							coverageBlend = 0.1
 							coverageFrequency = 3
 							coverageOctaves = 4
@@ -885,7 +897,7 @@
 							lonDelta = 0
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.5820895,0.4910489,0.417232,1
+							noiseColor = 0.582089543,0.491048872,0.417232007,1
 							noiseFrequency = 14
 							noiseOctaves = 2
 							noisePersistance = 0.6
@@ -959,7 +971,7 @@
 						{
 							alterApparentHeight = -0.8
 							alterRealHeight = 0
-							color = 0.3283582,0.298953,0.2904707,1
+							color = 0.328358233,0.298953027,0.290470749,1
 							coverageBlend = 0.5
 							coverageFrequency = 1
 							coverageOctaves = 4
@@ -968,10 +980,10 @@
 							name = DesertMountains
 							latDelta = 1
 							latitudeDouble = False
-							lonDelta = 0.491633551061994
+							lonDelta = 0.476008294508971
 							minimumRealHeight = 0
 							noiseBlend = 0.5
-							noiseColor = 0.2462686,0.2286743,0.2144087,1
+							noiseColor = 0.24626863,0.228674337,0.214408696,1
 							noiseFrequency = 28
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -1030,7 +1042,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2835821,0.2410344,0.1695543,1
+							color = 0.283582091,0.241034418,0.169554323,1
 							coverageBlend = 1
 							coverageFrequency = 2
 							coverageOctaves = 4
@@ -1042,7 +1054,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.5
-							noiseColor = 0.3215686,0.3019608,0.2745098,1
+							noiseColor = 0.321568638,0.301960796,0.274509817,1
 							noiseFrequency = 32
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -1111,7 +1123,7 @@
 						{
 							alterApparentHeight = 100
 							alterRealHeight = 10
-							color = 0.9477612,0.9477612,0.9477612,1
+							color = 0.947761178,0.947761178,0.947761178,1
 							coverageBlend = 0
 							coverageFrequency = 5
 							coverageOctaves = 4
@@ -1123,7 +1135,7 @@
 							lonDelta = 1
 							minimumRealHeight = 20
 							noiseBlend = 1
-							noiseColor = 0.5402881,0.6820635,0.7611941,1
+							noiseColor = 0.540288091,0.68206352,0.76119405,1
 							noiseFrequency = 4
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -1187,7 +1199,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.106928,0.1784129,0.2985075,1
+							color = 0.106928043,0.178412944,0.298507452,1
 							coverageBlend = 0
 							coverageFrequency = 5
 							coverageOctaves = 4
@@ -1199,7 +1211,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.5
-							noiseColor = 0.1465805,0.2964195,0.4179105,1
+							noiseColor = 0.146580532,0.296419472,0.417910457,1
 							noiseFrequency = 16
 							noiseOctaves = 4
 							noisePersistance = 0.6
@@ -1273,19 +1285,19 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2786641,0.3283582,0.1618829,1
+							color = 0.278664112,0.328358233,0.161882892,1
 							coverageBlend = 0.2
 							coverageFrequency = 5
 							coverageOctaves = 4
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0.507311485021372
+							latDelta = 0.505546810006219
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.5,0.4645949,0.2627857,1
+							noiseColor = 0.5,0.464594871,0.262785673,1
 							noiseFrequency = 16
 							noiseOctaves = 2
 							noisePersistance = 0.6
@@ -1380,12 +1392,12 @@
 							science = False
 							Material
 							{
-								color = 0.1323529,0.1323529,0.1323529,0.434
+								color = 0.132352948,0.132352948,0.132352948,0.433999985
 								mainTex = BUILTIN/mapletree
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
 								texCutoff = 0.5
-								fogColor = 0.8823529,0.8823529,1,1
+								fogColor = 0.882352948,0.882352948,1,1
 								heightFallOff = 0.2
 								globalDensity = -1.5E-05
 								atmosphereDepth = 5000
@@ -1415,12 +1427,12 @@
 							science = False
 							Material
 							{
-								color = 0.1476336,0.3358209,0.1077634,0.254902
+								color = 0.147633612,0.335820913,0.107763417,0.254901975
 								mainTex = BUILTIN/Grass2
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
 								texCutoff = 0.5
-								fogColor = 0.8941177,0.8941177,1,1
+								fogColor = 0.894117653,0.894117653,1,1
 								heightFallOff = 0.2
 								globalDensity = -1.5E-05
 								atmosphereDepth = 5000
@@ -1454,7 +1466,7 @@
 								mainTex = BUILTIN/rock00
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								color = 1,1,1,0.622
+								color = 1,1,1,0.621999979
 								diff = 0.2
 							}
 							Experiment
@@ -1483,7 +1495,7 @@
 							science = False
 							Material
 							{
-								color = 0.8916084,0.932053,1,1
+								color = 0.891608417,0.93205303,1,1
 								mainTex = BUILTIN/pinetree
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
@@ -1515,7 +1527,7 @@
 							science = False
 							Material
 							{
-								color = 0.7985075,0.7985075,0.7985075,1
+								color = 0.798507452,0.798507452,0.798507452,1
 								mainTex = BUILTIN/cactus
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
@@ -1587,7 +1599,7 @@
 					DEBUG_HighlightInclusion = False
 					heightMap = BUILTIN/decal_spaceport_0_height
 					heightMapDeformity = 100
-					position = -468960,211164.7,-310261
+					position = -468960,211164.703,-310261
 					removeScatter = True
 					radius = 2000
 					smoothColor = 0.2
@@ -1604,7 +1616,7 @@
 					flattenTo = 1300
 					innerRadius = 400
 					outerRadius = 1000
-					position = -468635.1,-68111.1,-370297.1
+					position = -468635.094,-68111.1016,-370297.094
 					smoothEnd = 0
 					smoothStart = 0
 					order = 99999
