--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -9,8 +9,8 @@
 		{
 			description = When Laythe was first discovered, it was not entered in the records because the scientist in charge thought he was looking at Kerbin.Luckily this error was corrected when a plucky intern informed him that “telescopes don’t work that way”.The intern was shortly afterwards “promoted” and moved to the experimental rocket testing program.
 			radius = 500000
-			geeASL = 0.800000011920929
-			mass = 2.9397663009231E+22
+			geeASL = 0.800273295870079
+			mass = 2.93973106291216E+22
 			gravParameter = 1962000029236.08
 			rotates = True
 			rotationPeriod = 52980.8790593796
@@ -32,38 +32,68 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 0,0.9882353,1,1
+					color = 0.725490212,0.835294127,0.890196085,1
 				}
 				Biome
 				{
 					name = Shores
 					value = 0
-					color = 0.9921569,0.6784314,0.007843138,1
+					color = 1,0.925490201,0.647058845,1
 				}
 				Biome
 				{
 					name = Dunes
 					value = 0
-					color = 0.02352941,1,0,1
+					color = 0.839215696,0.745098054,0.384313732,1
 				}
 				Biome
 				{
 					name = Crescent Bay
 					value = 0
-					color = 1,0,0,1
+					color = 0.368627459,0.43921569,0.800000012,1
 				}
 				Biome
 				{
 					name = The Sagen Sea
 					value = 0
-					color = 0.02352941,0.1529412,0.9764706,1
+					color = 0.149019614,0.384313732,0.686274529,1
+				}
+				Biome
+				{
+					name = Crater Island
+					value = 0
+					color = 0.678431392,0.580392182,0.196078435,1
+				}
+				Biome
+				{
+					name = Shallows
+					value = 0
+					color = 0.443137258,0.619607866,0.843137264,1
+				}
+				Biome
+				{
+					name = Crater Bay
+					value = 0
+					color = 0.282352954,0.490196079,0.760784328,1
+				}
+				Biome
+				{
+					name = DeGrasse Sea
+					value = 0
+					color = 0.0470588244,0.266666681,0.549019635,1
+				}
+				Biome
+				{
+					name = Peaks
+					value = 0
+					color = 1,0.964705884,0.835294127,1
 				}
 			}
 			ScienceValues
@@ -90,7 +120,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
@@ -109,8 +139,8 @@
 			temperatureCurveIsNormalized = False
 			temperatureLapseRate = 0.00564
 			temperatureSeaLevel = 282
-			ambientColor = 0.187128,0.2393932,0.3058824,1
-			lightColor = 0.8432836,0.6682193,0.4983039,0
+			ambientColor = 0.187128037,0.239393175,0.305882365,1
+			lightColor = 0.843283594,0.668219268,0.49830395,0
 			addAFG = True
 			pressureCurve
 			{
@@ -177,7 +207,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 499687.5
-				invWaveLength = 1.977449,5.015613,16.21895,0.5
+				invWaveLength = 1.97744942,5.01561308,16.2189484,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 512500
@@ -185,7 +215,7 @@
 				scale = 0.4682932
 				scaleDepth = -0.25
 				transformScale = 0,0,0
-				waveLength = 0.8432836,0.6682193,0.4983039,0
+				waveLength = 0.843283594,0.668219268,0.49830395,0
 				outerRadiusMult = 1.025
 				innerRadiusMult = 0.975
 			}
@@ -200,7 +230,7 @@
 			Material
 			{
 				color = 1,1,1,1
-				specColor = 0.3059701,0.3059701,0.3059701,1
+				specColor = 0.305970132,0.305970132,0.305970132,1
 				shininess = 0.1661175
 				texture = BUILTIN/newoceanmoon00
 				mainTex = BUILTIN/newoceanmoon00
@@ -216,7 +246,7 @@
 				rimColorRamp = BUILTIN/AerialRampKerbin2
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.004778683,-1.30465E-07,0.9999886,0
+				localLightDirection = -0.617191017,0.0226955116,-0.78648591,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -238,7 +268,7 @@
 			{
 				saturation = 1
 				contrast = 1
-				tintColor = 0.5147059,0.5147059,0.5147059,0
+				tintColor = 0.514705896,0.514705896,0.514705896,0
 				powerNear = 0.5
 				powerFar = 0.5
 				groundTexStart = 0
@@ -360,7 +390,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2537314,0.2405032,0.2297777,0
+							color = 0.25373137,0.240503222,0.229777679,0
 							coverageBlend = 0
 							coverageFrequency = 1
 							coverageOctaves = 1
@@ -372,7 +402,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.1865672,0.1837437,0.1676495,0
+							noiseColor = 0.186567187,0.183743656,0.167649537,0
 							noiseFrequency = 32
 							noiseOctaves = 8
 							noisePersistance = 0.5
@@ -431,7 +461,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.3283582,0.2973594,0.2973594,0
+							color = 0.328358233,0.297359377,0.297359377,0
 							coverageBlend = 0.2
 							coverageFrequency = 1
 							coverageOctaves = 1
@@ -443,7 +473,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.3432836,0.3149603,0.2820687,0
+							noiseColor = 0.343283594,0.314960271,0.28206867,0
 							noiseFrequency = 24
 							noiseOctaves = 8
 							noisePersistance = 0.5
@@ -502,7 +532,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.08402046,0.1054403,0.1492537,0
+							color = 0.0840204582,0.105440333,0.149253726,0
 							coverageBlend = 0
 							coverageFrequency = 1
 							coverageOctaves = 1
@@ -514,7 +544,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.06612043,0.07699783,0.1044776,0
+							noiseColor = 0.0661204308,0.0769978315,0.104477584,0
 							noiseFrequency = 24
 							noiseOctaves = 8
 							noisePersistance = 0.5
@@ -573,7 +603,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2313433,0.17757,0.1253783,0
+							color = 0.231343269,0.17757003,0.12537834,0
 							coverageBlend = 1
 							coverageFrequency = 24
 							coverageOctaves = 8
@@ -585,7 +615,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.3134328,0.2268716,0.1063042,0
+							noiseColor = 0.313432813,0.22687158,0.106304161,0
 							noiseFrequency = 24
 							noiseOctaves = 8
 							noisePersistance = 0.5
@@ -644,7 +674,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.7313433,0.7313433,0.7313433,0
+							color = 0.731343269,0.731343269,0.731343269,0
 							coverageBlend = 1
 							coverageFrequency = 12
 							coverageOctaves = 6
@@ -656,7 +686,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
-							noiseColor = 0.5522388,0.5191829,0.4807953,0
+							noiseColor = 0.552238822,0.519182861,0.480795324,0
 							noiseFrequency = 24
 							noiseOctaves = 8
 							noisePersistance = 0.5
@@ -715,7 +745,7 @@
 						{
 							alterApparentHeight = 100
 							alterRealHeight = 10
-							color = 0.7313433,0.7313433,0.7313433,0
+							color = 0.731343269,0.731343269,0.731343269,0
 							coverageBlend = 1
 							coverageFrequency = 12
 							coverageOctaves = 6
@@ -727,7 +757,7 @@
 							lonDelta = 1
 							minimumRealHeight = 20
 							noiseBlend = 0.25
-							noiseColor = 0.5522388,0.5191829,0.4807953,0
+							noiseColor = 0.552238822,0.519182861,0.480795324,0
 							noiseFrequency = 24
 							noiseOctaves = 8
 							noisePersistance = 0.5
@@ -810,7 +840,7 @@
 								mainTex = BUILTIN/brown_cliff
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								color = 1,1,1,0.422
+								color = 1,1,1,0.421999991
 								diff = 0.2
 							}
 							Experiment
@@ -892,6 +922,7 @@
 					persistance = 0.7
 					seed = 3475645
 					mode = Low
+					noiseType = Billow
 					lacunarity = 1.5
 					order = 30
 					enabled = True
