--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Minmus is the smallest moon orbiting Kerbin. From the surface of Kerbin, it can be seen on clear days as a tiny blue speck in the sky. It is often mistaken as dirt on telescope lenses or dead pixels, but the top minds at the Kerbal Astronomical Society assure us it is a real moon nevertheless.
 			radius = 60000
-			geeASL = 0.0500000007450581
-			mass = 2.64578967083079E+19
+			geeASL = 0.05001708099188
+			mass = 2.64575795662095E+19
 			gravParameter = 1765800026.31247
 			rotates = True
 			rotationPeriod = 40400
@@ -32,62 +32,62 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.254902,0.2941177,0.254902,1
+					color = 0.380392164,0.513725519,0.509803951,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.5215687,0.7176471,0.6392157,1
+					color = 0.529411793,0.670588255,0.615686297,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0.7372549,0.8941177,0.7568628,1
+					color = 0.690196097,0.882352948,0.807843149,1
 				}
 				Biome
 				{
 					name = Flats
 					value = 0
-					color = 0.1960784,0.2745098,0.3529412,1
+					color = 0.752941191,1,0.905882359,1
 				}
 				Biome
 				{
 					name = Great Flats
 					value = 0
-					color = 0.3411765,0.5450981,0,1
+					color = 0.411764711,0.760784328,0.737254918,1
 				}
 				Biome
 				{
 					name = Greater Flats
 					value = 0
-					color = 0.3529412,0.1372549,0.4156863,1
+					color = 0.647058845,0.843137264,0.850980401,1
 				}
 				Biome
 				{
 					name = Lesser Flats
 					value = 0
-					color = 0.9960784,0,0,1
+					color = 0.545098066,0.831372559,0.811764717,1
 				}
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 0,0.3529412,0.9960784,1
+					color = 1,1,1,1
 				}
 				Biome
 				{
 					name = Slopes
 					value = 0
-					color = 0.572549,0.3490196,0.3921569,1
+					color = 0.600000024,0.800000012,0.733333349,1
 				}
 			}
 			ScienceValues
@@ -114,7 +114,7 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -126,8 +126,8 @@
 			deferMesh = False
 			Material
 			{
-				color = 0.6343284,0.6343284,0.6343284,1
-				specColor = 0.119403,0.119403,0.119403,1
+				color = 0.634328365,0.634328365,0.634328365,1
+				specColor = 0.119403005,0.119403005,0.119403005,1
 				shininess = 0.03
 				texture = BUILTIN/NewMunSurfaceMap00
 				mainTex = BUILTIN/NewMunSurfaceMap00
@@ -314,8 +314,8 @@
 						Class
 						{
 							name = AbyPl
-							baseColor = 0.5292938,0.7164179,0.6425532,1
-							colorNoise = 0.4923145,0.7761194,0.6640912,1
+							baseColor = 0.529293835,0.716417909,0.642553151,1
+							colorNoise = 0.492314547,0.776119411,0.664091229,1
 							colorNoiseAmount = 0.200000002980232
 							fractalEnd = 0.00100000004749745
 							fractalStart = 0
@@ -336,8 +336,8 @@
 						Class
 						{
 							name = Beach
-							baseColor = 0.6255291,0.7761194,0.7192531,1
-							colorNoise = 0.3324237,0.3507463,0.3330643,1
+							baseColor = 0.625529051,0.776119411,0.719253123,1
+							colorNoise = 0.332423717,0.350746274,0.333064348,1
 							colorNoiseAmount = 0.200000002980232
 							fractalEnd = 0.449999988079071
 							fractalStart = 0.00100000004749745
@@ -358,8 +358,8 @@
 						Class
 						{
 							name = Grass
-							baseColor = 0.7109044,0.8283582,0.7150112,1
-							colorNoise = 0.5,0.5,0.4253731,1
+							baseColor = 0.710904419,0.828358173,0.715011179,1
+							colorNoise = 0.5,0.5,0.425373137,1
 							colorNoiseAmount = 0.300000011920929
 							fractalEnd = 0.899999976158142
 							fractalStart = 0.449999988079071
@@ -380,8 +380,8 @@
 						Class
 						{
 							name = Snow
-							baseColor = 0.2506126,0.3358209,0.2786182,1
-							colorNoise = 0.4302156,0.4328358,0.3391624,1
+							baseColor = 0.250612617,0.335820913,0.278618157,1
+							colorNoise = 0.430215567,0.432835817,0.339162409,1
 							colorNoiseAmount = 0.400000005960464
 							fractalEnd = 2
 							fractalStart = 0.899999976158142
@@ -545,7 +545,7 @@
 								mainTex = BUILTIN/rock00
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								color = 0.2272014,0.2867647,0.2192906,0.6862745
+								color = 0.227201387,0.286764681,0.219290644,0.686274529
 								diff = 0.6
 							}
 							Experiment
