--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Moho.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Moho.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Moho figures in Kerbal mythology as a fiery place with oceans of flowing lava. In reality however, it’s much less interesting. Scientists speculate about possible ways to make it “awesome like in the stories”. Some of those ideas have led to new breakthroughs in aerospace technology.
 			radius = 250000
-			geeASL = 0.275000005960464
-			mass = 2.52636168196748E+21
+			geeASL = 0.275093947318621
+			mass = 2.52633139930162E+21
 			gravParameter = 168609378654.509
 			rotates = True
 			rotationPeriod = 1210000
@@ -22,7 +22,7 @@
 			coreTemperatureOffset = 0
 			isHomeWorld = False
 			timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
-			sphereOfInfluence = 9646663.0233281
+			sphereOfInfluence = 9646663.02332811
 			hillSphere = 22060314.8155466
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
@@ -32,32 +32,32 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = North Pole
 					value = 0
-					color = 1,0.682353,0,1
+					color = 1,0.68235296,0,1
 				}
 				Biome
 				{
 					name = Northern Sinkhole Ridge
 					value = 0
-					color = 1,0,0.4705882,1
+					color = 1,0,0.470588237,1
 				}
 				Biome
 				{
 					name = Northern Sinkhole
 					value = 0
-					color = 1,0.9176471,0,1
+					color = 1,0.917647064,0,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.3882353,0.2627451,0.07843138,1
+					color = 0.388235301,0.262745112,0.0784313753,1
 				}
 				Biome
 				{
@@ -69,43 +69,43 @@
 				{
 					name = Central Lowlands
 					value = 0
-					color = 0,1,0.04705882,1
+					color = 0,1,0.0470588244,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.1372549,0.3921569,0.1686275,1
+					color = 0.137254909,0.392156869,0.168627456,1
 				}
 				Biome
 				{
 					name = Minor Craters
 					value = 0
-					color = 0.4980392,0.7058824,0,1
+					color = 0.498039216,0.70588237,0,1
 				}
 				Biome
 				{
 					name = South Western Lowlands
 					value = 0
-					color = 0,1,0.9411765,1
+					color = 0,1,0.941176474,1
 				}
 				Biome
 				{
 					name = South Eastern Lowlands
 					value = 0
-					color = 0.04705882,0,1,1
+					color = 0.0470588244,0,1,1
 				}
 				Biome
 				{
 					name = Canyon
 					value = 0
-					color = 0.9764706,0.6392157,0.6392157,1
+					color = 0.97647059,0.639215708,0.639215708,1
 				}
 				Biome
 				{
 					name = South Pole
 					value = 0
-					color = 0.9882353,0,1,1
+					color = 0.988235295,0,1,1
 				}
 			}
 			ScienceValues
@@ -132,7 +132,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -261,7 +261,7 @@
 				VertexSimplexNoiseColor
 				{
 					blend = 1
-					colorStart = 0.7238806,0.7238806,0.7238806,1
+					colorStart = 0.723880589,0.723880589,0.723880589,1
 					colorEnd = 0,0,0,1
 					frequency = 2
 					octaves = 12
@@ -293,7 +293,7 @@
 						Class
 						{
 							name = Beach
-							color = 0.3283582,0.2550166,0.2055109,1
+							color = 0.328358233,0.255016565,0.205510929,1
 							altitudeStart = 0.400000005960464
 							altitudeEnd = 1
 							lerpToNext = False
