--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
@@ -9,8 +9,8 @@
 		{
 			description = The Mun, is a large satellite orbiting Kerbin. It is mostly gray in appearance, with craters of various sizes dotting its otherwise smooth surface.The Mun’s discovery is widely regarded as one of the more important breakthroughs of Kerbal evolution. Granted, it didn’t happen all that long ago, but it’s still fair to say Kerbals are wiser and more evolved now than they were back then.
 			radius = 200000
-			geeASL = 0.165999993681908
-			mass = 9.76002360215474E+20
+			geeASL = 0.166056700098353
+			mass = 9.7599066119646E+20
 			gravParameter = 65138397520.7807
 			rotates = True
 			rotationPeriod = 138984.376574476
@@ -32,98 +32,110 @@
 			exactSearch = False
 			useTheInName = True
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.4392157,0.4392157,0.4392157,1
+					color = 0.36470589,0.458823532,0.509803951,1
 				}
 				Biome
 				{
 					name = Northern Basin
 					value = 0
-					color = 0.3882353,0.01176471,0.3960784,1
+					color = 0.423529416,0.458823532,0.576470613,1
 				}
 				Biome
 				{
 					name = East Crater
 					value = 0
-					color = 0,0.9960784,0.3294118,1
+					color = 0.580392182,0.627451003,0.796078444,1
 				}
 				Biome
 				{
 					name = Northwest Crater
 					value = 0
-					color = 0.6941177,0.427451,0.1137255,1
+					color = 0.407843143,0.474509805,0.694117665,1
 				}
 				Biome
 				{
 					name = Southwest Crater
 					value = 0
-					color = 0.772549,0.9960784,0,1
+					color = 0.65882355,0.678431392,0.737254918,1
 				}
 				Biome
 				{
 					name = Farside Crater
 					value = 0
-					color = 0.9843137,0,0.9960784,1
+					color = 0.56078434,0.647058845,0.90196079,1
 				}
 				Biome
 				{
 					name = Canyons
 					value = 0
-					color = 0.6627451,0.6235294,0,1
+					color = 0.325490206,0.368627459,0.521568656,1
 				}
 				Biome
 				{
 					name = Polar Crater
 					value = 0
-					color = 0.9960784,0,0,1
+					color = 0.603921592,0.647058845,0.670588255,1
 				}
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 0.4,0.9764706,0.9960784,1
+					color = 0.917647064,0.925490201,0.929411769,1
 				}
 				Biome
 				{
 					name = Polar Lowlands
 					value = 0
-					color = 0.3215686,0.7803922,0.7960784,1
+					color = 0.811764717,0.827450991,0.839215696,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.9960784,0.9960784,0.9960784,1
+					color = 0.450980395,0.53725493,0.58431375,1
 				}
 				Biome
 				{
 					name = Highland Craters
 					value = 0
-					color = 0.6784314,0.3843137,0.7333333,1
+					color = 0.694117665,0.733333349,0.870588243,1
 				}
 				Biome
 				{
 					name = Midland Craters
 					value = 0
-					color = 0.1058824,0.1058824,0.1058824,1
+					color = 0.164705887,0.247058824,0.294117659,1
 				}
 				Biome
 				{
 					name = East Farside Crater
 					value = 0
-					color = 0.1176471,0.007843138,1,1
+					color = 0.603921592,0.611764729,0.917647064,1
 				}
 				Biome
 				{
 					name = Twin Craters
 					value = 0
-					color = 1,0.5647059,0,1
+					color = 0.678431392,0.745098054,0.945098042,1
+				}
+				Biome
+				{
+					name = Lowlands
+					value = 0
+					color = 0.254901975,0.356862754,0.41568628,1
+				}
+				Biome
+				{
+					name = Farside Basin
+					value = 0
+					color = 0.529411793,0.556862772,0.639215708,1
 				}
 			}
 			ScienceValues
@@ -150,7 +162,7 @@
 			meanAnomalyAtEpoch = 1.70000004768372
 			meanAnomalyAtEpochD = 97.4028279043159
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -162,7 +174,7 @@
 			deferMesh = False
 			Material
 			{
-				color = 0.7238806,0.7346848,0.7346848,1
+				color = 0.723880589,0.734684765,0.734684765,1
 				specColor = 0,0,0,1
 				shininess = 0.03
 				texture = BUILTIN/NewMunSurfaceMapDiffuse
@@ -427,7 +439,7 @@
 							science = False
 							Material
 							{
-								color = 0.6791044,0.6791044,0.6791044,1
+								color = 0.679104447,0.679104447,0.679104447,1
 								mainTex = BUILTIN/lunar cliff face
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
