--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Pol.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Pol.cfg
@@ -9,8 +9,8 @@
 		{
 			description = This moon was especially hard to spot, as it looks just like a pollen grain, particularly when observed through telescopes based near dusty fields.Pol was finally discovered when someone decided to write down the location of the pollen, after having given up on yet another failed attempt to be rid of the smudge.
 			radius = 44000
-			geeASL = 0.038
-			mass = 1.08136362001798E+19
+			geeASL = 0.0380129809873912
+			mass = 1.08135065806823E+19
 			gravParameter = 721702080
 			rotates = True
 			rotationPeriod = 901902.623531173
@@ -32,32 +32,32 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 0.09411765,1,0,1
+					color = 1,0.952941179,0.772549033,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 1,0.6352941,0,1
+					color = 0.713725507,0.647058845,0.407843143,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 1,0,0,1
+					color = 0.960784316,0.894117653,0.639215708,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0,0.1882353,1,1
+					color = 0.831372559,0.75686276,0.478431374,1
 				}
 			}
 			ScienceValues
@@ -84,7 +84,7 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -269,8 +269,8 @@
 				VertexSimplexNoiseColor
 				{
 					blend = 1
-					colorStart = 0.9253731,0.8996817,0.4950422,1
-					colorEnd = 0.1398601,0.1437858,0.1492537,1
+					colorStart = 0.925373137,0.899681747,0.495042235,1
+					colorEnd = 0.139860123,0.143785819,0.149253726,1
 					frequency = 4
 					octaves = 8
 					persistence = 0.5
@@ -301,7 +301,7 @@
 						Class
 						{
 							name = Beach
-							color = 0.6567164,0.4588995,0.401837,1
+							color = 0.656716406,0.458899528,0.401836962,1
 							altitudeStart = 0.600000023841858
 							altitudeEnd = 0.850000023841858
 							lerpToNext = True
@@ -310,7 +310,7 @@
 						Class
 						{
 							name = Grass
-							color = 0.477612,0.477612,0.477612,1
+							color = 0.477611959,0.477611959,0.477611959,1
 							altitudeStart = 0.850000023841858
 							altitudeEnd = 1
 							lerpToNext = False
@@ -464,7 +464,7 @@
 							science = False
 							Material
 							{
-								color = 0.6641791,0.6319441,0.4482048,1
+								color = 0.664179087,0.63194412,0.448204786,1
 								mainTex = BUILTIN/distantground
 								mainTexScale = 0.5,0.5
 								mainTexOffset = 0,0
@@ -498,7 +498,7 @@
 							science = False
 							Material
 							{
-								color = 0.6641791,0.6319441,0.4482048,1
+								color = 0.664179087,0.63194412,0.448204786,1
 								mainTex = BUILTIN/distantground
 								mainTexScale = 0.5,0.5
 								mainTexOffset = 0,0
