--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Tylo was the first moon of Jool to be discovered by the Kerbal Astronomical Society. After many failed attempts to take a flawless picture of Jool to hang on the office walls, it was finally discovered that the wandering white smear was indeed a moon.Scientists speculate that the view from the surface with Laythe, Vall and Jool overhead must be “quite something”.
 			radius = 600000
-			geeASL = 0.800000011920929
-			mass = 4.23326347332927E+22
+			geeASL = 0.800273295870079
+			mass = 4.23321273059351E+22
 			gravParameter = 2825280042099.95
 			rotates = True
 			rotationPeriod = 211926.35802123
@@ -32,56 +32,62 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.9960784,0.003921569,0.9607843,1
+					color = 0.701960802,0.639215708,0.603921592,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.145098,0.9960784,0.003921569,1
+					color = 0.792156875,0.733333349,0.701960802,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0.9960784,0.003921569,0.003921569,1
+					color = 0.619607866,0.556862772,0.517647088,1
 				}
 				Biome
 				{
 					name = Mara
 					value = 0
-					color = 0,0.9921569,0.9098039,1
+					color = 0.53725493,0.474509805,0.435294122,1
 				}
 				Biome
 				{
 					name = Minor Craters
 					value = 0
-					color = 0.03529412,0.7254902,0.1490196,1
+					color = 0.447058827,0.388235301,0.352941185,1
 				}
 				Biome
 				{
-					name = Major Crater
+					name = Tycho Crater
 					value = 0
-					color = 0.9960784,0.9607843,0.003921569,1
+					color = 0.827450991,0.643137276,0.533333361,1
 				}
 				Biome
 				{
-					name = Major Crater
+					name = Galileio Crater
 					value = 0
-					color = 0.9921569,0.5411765,0.003921569,1
+					color = 0.741176486,0.541176498,0.423529416,1
 				}
 				Biome
 				{
-					name = Major Crater
+					name = Grissom Crater
 					value = 0
-					color = 0.003921569,0.003921569,0.9960784,1
+					color = 0.741176486,0.541176498,0.423529416,1
+				}
+				Biome
+				{
+					name = Gagarin Crater
+					value = 0
+					color = 0.58431375,0.388235301,0.274509817,1
 				}
 			}
 			ScienceValues
@@ -108,7 +114,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -318,7 +324,7 @@
 						Class
 						{
 							name = AbyPl
-							color = 0.08955222,0.08183172,0.07107817,1
+							color = 0.0895522237,0.0818317235,0.0710781664,1
 							altitudeStart = 0
 							altitudeEnd = 0.100000001490116
 							lerpToNext = True
@@ -327,7 +333,7 @@
 						Class
 						{
 							name = Beach
-							color = 0.1865672,0.1754775,0.1754775,1
+							color = 0.186567187,0.175477535,0.175477535,1
 							altitudeStart = 0.100000001490116
 							altitudeEnd = 0.699999988079071
 							lerpToNext = True
@@ -336,7 +342,7 @@
 						Class
 						{
 							name = Beach
-							color = 0.7611941,0.7159483,0.7159483,1
+							color = 0.76119405,0.715948284,0.715948284,1
 							altitudeStart = 0.699999988079071
 							altitudeEnd = 1
 							lerpToNext = False
@@ -493,7 +499,7 @@
 							science = False
 							Material
 							{
-								color = 0.6791044,0.6791044,0.6791044,1
+								color = 0.679104447,0.679104447,0.679104447,1
 								mainTex = BUILTIN/lunar cliff face
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
@@ -513,7 +519,7 @@
 					DEBUG_HighlightInclusion = False
 					heightMap = BUILTIN/saganface
 					heightMapDeformity = 50
-					position = 569917.4,-94669.8,181300.9
+					position = 569917.375,-94669.7969,181300.906
 					removeScatter = True
 					radius = 6000
 					smoothColor = 0
