--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Vall was one of the last Moons of Jool to be discovered. Frustrated scientists kept attempting to wipe it off the lenses of their telescopes. Eventually after a rash of returned telescopes, Advanced Optics Co. finally decided to just tell them it was an actual object in the sky. 
 			radius = 300000
-			geeASL = 0.234999999403954
-			mass = 3.10880280901635E+21
+			geeASL = 0.235080276562617
+			mass = 3.10876554482042E+21
 			gravParameter = 207481499473.751
 			rotates = True
 			rotationPeriod = 105962.088893924
@@ -23,7 +23,7 @@
 			isHomeWorld = False
 			timewarpAltitudeLimits = 0 24500 24500 24500 40000 60000 80000 100000
 			sphereOfInfluence = 2406401.44479404
-			hillSphere = 3893201.55262435
+			hillSphere = 3893201.55262436
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			navballSwitchRadiusMultLow = 0.055
@@ -32,32 +32,62 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 1,0,0,1
+					color = 0.745098054,0.968627453,0.988235295,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.9843137,0.01568628,0.4823529,1
+					color = 0.419607848,0.776470602,0.807843149,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0,0.1882353,1,1
+					color = 0.270588249,0.698039234,0.737254918,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0,1,0.02352941,1
+					color = 1,1,1,1
+				}
+				Biome
+				{
+					name = Northeast Basin
+					value = 0
+					color = 0.698039234,0.698039234,0.698039234,1
+				}
+				Biome
+				{
+					name = Northwest Basin
+					value = 0
+					color = 0.588235319,0.588235319,0.588235319,1
+				}
+				Biome
+				{
+					name = Southern Basin
+					value = 0
+					color = 0.866666675,0.866666675,0.866666675,1
+				}
+				Biome
+				{
+					name = Southern Valleys
+					value = 0
+					color = 0.78039217,0.78039217,0.78039217,1
+				}
+				Biome
+				{
+					name = Mountains
+					value = 0
+					color = 0.611764729,0.850980401,0.870588243,1
 				}
 			}
 			ScienceValues
@@ -84,7 +114,7 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -96,7 +126,7 @@
 			deferMesh = False
 			Material
 			{
-				color = 0.6044776,0.6044776,0.6044776,1
+				color = 0.604477644,0.604477644,0.604477644,1
 				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/gp1icemoon00
@@ -284,7 +314,7 @@
 						Class
 						{
 							name = Ice
-							color = 0.1156716,0.195088,0.2313433,1
+							color = 0.115671635,0.195087969,0.231343269,1
 							altitudeStart = -1
 							altitudeEnd = 0.600000023841858
 							lerpToNext = True
@@ -293,7 +323,7 @@
 						Class
 						{
 							name = Snow
-							color = 0.5037574,0.6702008,0.7313433,1
+							color = 0.503757417,0.670200825,0.731343269,1
 							altitudeStart = 0.600000023841858
 							altitudeEnd = 0.699999988079071
 							lerpToNext = True
@@ -302,7 +332,7 @@
 						Class
 						{
 							name = Snow
-							color = 0.7482778,0.8683491,0.9029851,1
+							color = 0.748277843,0.868349135,0.902985096,1
 							altitudeStart = 0.699999988079071
 							altitudeEnd = 1
 							lerpToNext = False
@@ -313,8 +343,8 @@
 				VertexSimplexNoiseColor
 				{
 					blend = 0.3
-					colorStart = 0.2742586,0.2835821,0.2389625,0
-					colorEnd = 0.6343284,0.6286346,0.5389573,0
+					colorStart = 0.274258614,0.283582091,0.238962531,0
+					colorEnd = 0.634328365,0.628634572,0.538957298,0
 					frequency = 12
 					octaves = 8
 					persistence = 0.5
