--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Dres/Dres_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Dres/Dres_Values.cfg
@@ -5,7 +5,7 @@
 		%Properties
 		{
 			&radius = 138000
-			&geeASL = 0.115
+			&geeASL = 0.115039284567105
 			&rotationPeriod = 34800
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
