--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
@@ -5,7 +5,7 @@
 		%Properties
 		{
 			&radius = 600000
-			&geeASL = 1
+			&geeASL = 1.00034160493135
 			&rotationPeriod = 21600
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
