--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_Values.cfg
@@ -5,7 +5,7 @@
 		%Properties
 		{
 			&radius = 44000
-			&geeASL = 0.038
+			&geeASL = 0.0380129809873912
 			&rotationPeriod = 901902.623531173
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 5000 5000 5000 8000 12000 30000 90000
